--- a/nginx.conf
+++ b/nginx.conf
@@ -10,33 +10,45 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # Set client body size to allow larger uploads (e.g., 500MB)
+    client_max_body_size 500M;
+
     server {
         listen       80;
-        server_name  localhost;
+        server_name  _; # Catch-all server name
 
         # Serve static files from the uploads directory
+        # In Docker/Linux, this path should be mapped to the container's volume
         location /uploads/ {
-            alias C:/Users/umedbadm/Documents/project/server/uploads/;
-            autoindex on;
-            add_header Content-Disposition 'attachment'; # Force download
+            alias /app/uploads/;
+            autoindex off;
+            add_header Content-Disposition 'attachment'; 
         }
 
         # Proxy backend requests
         location /upload {
-            proxy_pass http://localhost:5000/upload;
+            proxy_pass http://backend:5000/upload;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /api/ {
+            proxy_pass http://backend:5000/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+        
+        location /download/ {
+            proxy_pass http://backend:5000/download/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /files {
-            proxy_pass http://localhost:5000/files;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Serve frontend (assuming it's built and placed in a 'dist' folder)
+        # Serve frontend application
         location / {
-            root C:/Users/umedbadm/Documents/project/client/dist;
+            root /usr/share/nginx/html;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
