--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -37,7 +37,7 @@ server {
     # Serve Uploaded Files with Forced Download
     location /uploads/ {
         alias /app/uploads/;
-        autoindex on;
+        autoindex off;
         add_header Content-Disposition 'attachment';
     }
 }
